# handirob

./: README.md
autonomous_nav/: CMakeLists.txt  package.xml
autonomous_nav/launch/: .publish_tf.launch.kate-swp  publish_tf.launch  qr_detect.launch  set_goal.launch
autonomous_nav/scripts/: TF_Broadcast_test.py  pressToLift.py  set_goal.py  simpleMovement.py  simpleMovementAhead.py
autonomous_nav/src/: Approach_Behaviour.py  Lift_test.py  SetGoal_server.py  approach_person.py  approach_stand.py  approach_stand_bak.py  find_stand.py  goto_stand.py  lift_test_2.py  lifting_mechanism.py  set_goal.py  set_goal_2.py  stand_behavior.py
autonomous_nav/srv/: SetGoal.srv
bags/: smalllab.bag
docking/handirob_detection/: CMakeLists.txt  package.xml
docking/handirob_detection/launch/: module_detector.launch
docking/handirob_detection/nodes/: module_detector.py
docking/handirob_docking/: CMakeLists.txt  package.xml
docking/handirob_docking/action/: Docking.action
docking/handirob_docking/launch/: handirob_docking.launch  server.launch
docking/handirob_docking/nodes/: docking_client.py  docking_server.py
docking/handirob_lifting/: CMakeLists.txt  package.xml  setup.py
docking/handirob_lifting/action/: Lifting.action
docking/handirob_lifting/launch/: lifting_server.launch
docking/handirob_lifting/nodes/: lifting_server.py
handirob_behavior_tree/: CMakeLists.txt  package.xml
handirob_behavior_tree/include/handirob_behavior_tree/action_nodes/: move_to.h  recognize_detection.h  set_mood.h  update_stand_pose.h
handirob_behavior_tree/src/: handirob_behavior_tree.cc
handirob_behavior_tree/src/action_nodes/: move_to.cc  recognize_detection.cc  set_mood.cc  update_stand_pose.cc
handirob_behavior_tree/trees/: testtree.xml  usecase1.xml  usecase3_smooth.xml
handirob_bringup/: 99-handirob-cdc.rules  CMakeLists.txt  package.xml
handirob_bringup/launch/: demo_handicart.launch  handicart.launch  handirob.launch  handirob_cart.launch  handirob_cart_live.launch  handirob_cart_map.launch  handirob_cart_nav.launch  handirob_cart_slam.launch  handirob_gmapping.launch  handirob_lds_sensors.launch  handirob_model.launch  handirob_remote.launch  handirob_robot.launch  handirob_sensors.launch  handirob_slam.launch  handirob_teleop_key.launch  lds.launch  lds_single.launch  opencr.launch  rpLidarA1.launch
handirob_bringup/scripts/: bindUSB.sh  create_udev_rules  emergencyBtnHandling.py  testscript.py  unbindUSB.sh
handirob_description/: CMakeLists.txt  package.xml
handirob_description/config/: handirob_lds_2d.lua  handirob_rp_2d.lua
handirob_description/rviz/: handirob_gmapping.rviz
handirob_description/urdf/: frames.gv  handirob.urdf.xacro  handirob_new.urdf.xacro  handirob_old.urdf.xacro  handirob_v1.urdf.xacro
handirob_lifting/: CMakeLists.txt  package.xml
handirob_lifting/action/: lift.action
handirob_lifting/src/: lifting.py  lifting_client.py
handirob_navigation/: CMakeLists.txt  package.xml
handirob_navigation/launch/: amcl.launch  handirob_navigation.launch  move_base.launch
handirob_navigation/maps/: OUH.yaml  OUH_entrance.pgm  OUH_entrance.yaml  SDU_lab.pgm  SDU_lab_old.yaml  SDU_lab_top.pgm  SDU_lab_top.yaml  lab_cart.yaml  lab_hallway.pgm  lab_hallway.yaml  lab_rplidar.pgm  lab_rplidar.yaml  map_dual_lidar.pgm  map_dual_lidar.yaml
handirob_navigation/param/: base_local_planner_params.yaml  costmap_common_params_handirob.yaml  dwa_local_planner_params_handirob.yaml  dwa_local_planner_params_handirob_old.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml  teb_local_planner_params.yaml  teb_local_planner_params_bad.yaml  teb_local_planner_params_old.yaml
handirob_navigation/pose_data/: init_pose.npy
handirob_navigation/src/: init_pose_manager_node.py  set_init_pose.py  update_init_pose.py
handirob_opencr/handirob_core/: handirob.h  handirob_core.ino  handirob_core_config.h
handirob_slam/: CMakeLists.txt  package.xml
handirob_slam/src/: flat_world_imu_node.cpp
hls_lfcd_lds_driver/src/: hlds_laser_publisher.cpp
maps/: lab_cart.pgm  lab_gmapping.pgm  lab_gmapping.yaml  lab_rplidar.yaml  livingroom_gmap.pgm  livingroom_gmap.yaml
stand_pose/: CMakeLists.txt  package.xml
test_readers/: CMakeLists.txt  package.xml
ui_control/: CMakeLists.txt  package.xml
ui_control-master/: CMakeLists.txt
(+54 files in other folders)
