<?xml version="1.0"?>
<package format="2">
  <name>handirob_detection</name>
  <version>0.1.0</version>
  <description>Handirob module detection</description>

  <maintainer email="fh@mmmi.sdu.dk">Frederik Haarslev</maintainer>

  <license>Apache2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>object_msgs</depend>
  <depend>sensor_msgs</depend>

</package>
