<?xml version="1.0"?>
<package format="2">
  <name>handirob_lifting</name>
  <version>0.1.0</version>
  <description>Handirob lifting mechanism service provider and action server</description>

  <maintainer email="fh@mmmi.sdu.dk">Frederik Haarslev</maintainer>

  <license>Apache2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>rospy</depend>
  <depend>std_srvs</depend>

</package>
